fix(style) : LongCard text wrap

--- a/src/app/components/card/LongCard.css
+++ b/src/app/components/card/LongCard.css
@@ -29,6 +29,7 @@
     margin: 0px;
     padding-top: 20px;
     text-wrap: nowrap;
+    white-space: nowrap;
 }
 
 .longCardImage {
